<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:text="@string/adicionarPaciente" />

    <TextView
        android:id="@+id/tvCamposObrigatorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:text="@string/campos_obrigatorios" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvgrp_sanguineo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/grp_sanquinio"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etgrp_sanguineo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvlogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Logradouro"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etLogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Numero" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="number" />

    <TextView
        android:id="@+id/tvCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cidade" />

    <EditText
        android:id="@+id/etCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="text" />

    <TextView
        android:id="@+id/tvUF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UF" />

    <EditText
        android:id="@+id/etUF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="text" />

    <TextView
        android:id="@+id/tvCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celular" />

    <EditText
        android:id="@+id/etCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="number" />

    <TextView
        android:id="@+id/tvFixo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fixo" />

    <EditText
        android:id="@+id/etFixo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="number" />

    <Button
        android:id="@+id/btnAddPaciente"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar" />

</LinearLayout>