<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:text="@string/adicionarConsulta" />

    <TextView
        android:id="@+id/tvCamposObrigatorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:text="@string/campos_obrigatorios" />

    <TextView
        android:id="@+id/tvPaciente_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/paciente_Id"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPaciente_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvMedico_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/medico_id"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etMedico_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="" />

    <TextView
        android:id="@+id/tvdata_hora_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data_hora_inicio"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etdata_hora_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="" />

    <TextView
        android:id="@+id/tvdata_hora_fim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_hora_fim" />

    <EditText
        android:id="@+id/etdata_hora_fim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/tvObservacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observacao" />

    <EditText
        android:id="@+id/etObservacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />



    <Button
        android:id="@+id/btnAddConsulta"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar" />

</LinearLayout>